ITE/GCL08/AG400408/Lab12/yaml/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app
  labels:
    app: nginx-app
spec:
  containers:
  - name: nginx-app
    image: nginx-app
    imagePullPolicy: Never
    ports:
    - containerPort: 80
