ITE/GCL08/AG400408/Lab12/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-app
  ports:
   - protocol: TCP
     port: 80
