ITE/GCL08/AG400408/Lab12/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: adam.test
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service:
         name: nginx-service
         port:
          number: 80
